# deltastream-databricks

./: README.md  pyproject.toml
src/deltastream_databricks/: __init__.py  query.py
